--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Admin Panel</a>
+                <a class="navbar-brand" href="/">CDT Event One Scoring Engine</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="active" class="nav navbar-nav side-nav">
