let them be full-width!

--- a/scoreboard/app/templates/scoring/injects/admin.html
+++ b/scoreboard/app/templates/scoring/injects/admin.html
@@ -19,7 +19,7 @@ Inject Management
         <h1>Inject Management</h1>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12">
             {% for inject in injects %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
