--- a/scoreboard/app/templates/scoring/injects/index.html
+++ b/scoreboard/app/templates/scoring/injects/index.html
@@ -17,7 +17,7 @@ Available injects for {{ team.name }}
         <h1>Available injects for {{ team.name }}</h1>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12">
             {% for inject in injects %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
