--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav navbar-right navbar-user">
                     <li class="dropdown user-dropdown">
                         {% if current_user.is_authenticated %}
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ current_user.first_name or current_user.username }}<b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ current_user.get_name() or current_user.username }}<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ url_for('user.logout') }}"><i class="fa fa-power-off"></i> Log Out</a></li>
                             </ul>
