--- a/scoreboard/app/templates/scoring/flags/admin.html
+++ b/scoreboard/app/templates/scoring/flags/admin.html
@@ -16,20 +16,25 @@
     <div class="page-header">
         <h1>Flag Status</h1>
     </div>
-    <ul>
-        {% for flag in flags%}
-            <li>
+    {% for flag in flags%}
+        <div class="panel panel-default">
+            <div class="panel-heading">
                 <h2>
                     {{ flag.flag }}
                     <small>{{ flag.value }} Points</small>
                 </h2>
-                <p>{{ flag.description|nl2br }}</p>
-                <ul>
-                    {% for solve in flag.discoveries %}
-                        <li><strong>{{ solve.team.name }}</strong> discovered at {{ solve.date_discovered }}</li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {%  endfor %}
-    </ul>
+            </div>
+            <div class="panel-body">
+                {{ flag.description|nl2br }}
+            </div>
+            <ul class="list-group">
+                {% for solve in flag.discoveries %}
+                    <li class="list-group-item">
+                        <strong>{{ solve.discovery_user.get_name() }} ({{ solve.team.name }})</strong>
+                        discovered at {{ solve.date_discovered }}
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {%  endfor %}
 {% endblock %}
