--- a/scoreboard/app/templates/scoring/flags/index.html
+++ b/scoreboard/app/templates/scoring/flags/index.html
@@ -34,15 +34,23 @@
     <div class="page-header">
         <h1>Flags Captured by {{ team.name }}</h1>
     </div>
-    <ul>
-        {% for solve in flags%}
-            <li>
+    {% for solve in flags %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
                 <h2>
                     {{ solve.flag.flag }}
                     <small>{{ solve.flag.value }} Points</small>
                 </h2>
-                <p>{{ solve.flag.description|nl2br }}</p>
-            </li>
-        {%  endfor %}
-    </ul>
+            </div>
+            <div class="panel-body">
+                {{ flag.description|nl2br }}
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>{{ solve.discovery_user.get_name() }} ({{ solve.team.name }})</strong>
+                    discovered at {{ solve.date_discovered }}
+                </li>
+            </ul>
+        </div>
+    {%  endfor %}
 {% endblock %}
