--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -42,7 +42,7 @@
                         {% if current_user.is_authenticated %}
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ current_user.get_name() or current_user.username }}<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('user.profile') }}"><i class="fa fa-user"></i> Profile</a></li>
+                                <li><a href="{{ url_for('users.edit_user_profile_names') }}"><i class="fa fa-user"></i> Profile</a></li>
                                 <li><a href="{{ url_for('user.change_password') }}"><i class="fa fa-lock"></i> Change Password</a></li>
                                 <li class="divider"></li>
                                 <li><a href="{{ url_for('user.logout') }}"><i class="fa fa-power-off"></i> Log Out</a></li>
