--- a/scoreboard/app/templates/users/profile.html
+++ b/scoreboard/app/templates/users/profile.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1><span class="fa fa-user"></span> {{ user.get_name() }} User Profile</h1>
-    <form method="POST" action="{{ url_for('credentials.team_credential_edit', credential_id=credential.id) }}">
+    <form method="POST" action="{{ url_for('users.edit_user_profile_names') }}">
         {{ form.hidden_tag() }}
         <div class="form-group">
             <label for="first_name">
@@ -21,8 +21,8 @@
             {{ form.last_name(size=50, class_="form-control") }}
         </div>
         <div class="form-group">
-            <label for="old_password">
-                {{ form.old_password.label }}
+            <label for="display_name">
+                {{ form.display_name.label }}
             </label>
             {{ form.display_name(size=50, class_="form-control") }}
         </div>
