Show username of person who changed credentials, and the server(s) they are used for

--- a/scoreboard/app/templates/credentials/index.html
+++ b/scoreboard/app/templates/credentials/index.html
@@ -31,7 +31,9 @@
                 </h2>
                 <ul>
                     <li>
-                        Password last changed:
+                        Password last changed by
+                        <strong>{{ credential.last_change_user or 'White Team' }}</strong>
+                        at
                         <strong>{{ credential.last_changed }}</strong>
                     </li>
                     <li>
@@ -39,7 +41,7 @@
                         <ul>
                             {%  for service_check in credential.checks %}
                                 <li>
-                                    <strong>{{ service_check.service.friendly_name() }}</strong>
+                                    <strong>{{ service_check.service.friendly_name() }} on {{ service_check.service.host }}</strong>
                                     {{ service_check.friendly_name() }}
                                 </li>
                             {% endfor %}
