Fix color for form inputs so you can actually read them

--- a/scoreboard/app/static/css/local.css
+++ b/scoreboard/app/static/css/local.css
@@ -1720,6 +1720,9 @@ fieldset[disabled] .form-control {
   background-color: #adafae;
   opacity: 1;
 }
+input.form-control {
+  color: #181818;
+}
 textarea.form-control {
   height: auto;
 }
